--- a/cs50/project0/static/project0/styles.css
+++ b/cs50/project0/static/project0/styles.css
@@ -2,11 +2,13 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    font-family: arial,sans-serif
+    font-family: arial,sans-serif;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 1rem;
+}
+
 a {
     text-decoration: none;
     color: inherit;
@@ -22,43 +24,48 @@ nav ul {
     list-style: none;
     gap: 1rem;
 }
-
 main {
-    flex-grow: 1;
     display: grid;
-    place-items: center;
-    margin-bottom: 10rem;
+    grid-template-rows: 290px 140px;
 }
-.search-container {
+
+.logoWrapper {
+    align-self: end;
+    margin-bottom: .25rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
 }
 .googlelogo {
     color: navy;
-    text-align: center;
-    font-size: 4.5rem;
-    margin: 1rem;
+    font-size: 5rem;
+    margin: 0;
+}
+.googleSubTitle {
+    color: navy;
+    font-size: 1.75rem;
+    margin: 0 0 0.25rem 0;
 }
 main form {
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-content: center;
-    gap: 10px;
 }
 .searchinput {
     grid-column: 1/-1;
     border-radius: 50px;
-    padding: 5px;
+    font-size: 1.25rem;
     border: 1px solid #dfe1e5;
-    padding-inline: 2rem;
-    width: 350px;
+    margin-inline: auto;
+    padding-inline: 2rem .05rem;
+    width: 480px;
 }
 .advanced-search-form {
     display: grid;
-    grid-template-columns: 1fr auto;
+    grid-template-columns: repeat(2, auto);
     padding-inline: 2rem;
+    column-gap: 1rem;
+    row-gap: .5rem;
 }
 .advanced-search-form label {
     text-align: right;
@@ -104,6 +111,10 @@ input[type=submit]:hover, input[type=button]:hover  {
 
 footer {
     background-color: #f2f2f2;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     height: 2rem;
     display: grid;
     place-items: center;
